# caffe2-cpp

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.cc  caffe2.patch  class_name_coco.h  class_name_imagenet.h
image/detect/: NOTICE
